Move Browse and Search buttons to the top Nav bar.

--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -1,10 +1,5 @@
 .c-MainSearchToggle--group {
-    align-self: center;
-    margin: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 1;
+    position: relative;
 }
 .c-MainSearchToggle--group label {
     background-color: #fff;
