CSS update FeatureCards

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -182,8 +182,8 @@ div.image-wrapper.center figcaption {
 // * Local fix for responsive display - temp
 .c-content__main__kmaps img,
 .c-content__main__kmaps .images.legacy img {
-    height: auto !important;
-    max-width: 100% !important;
+    /*  height: auto !important;
+    max-width: 100% !important; */
 }
 
 .c-content__main__kmaps > h3 {
