--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -1,10 +1,11 @@
 @import '../../../index-variables';
 
 .l-column__related {
-    min-width: 20rem;
-    max-width: 34rem;
+    /* min-width: 20rem;
+    max-width: 34rem; */
+    width: 25rem;
     height: 100vh;
-    margin: 0 0 0 -20rem;
+    margin: 0 0 0 -25rem;
     padding: 0;
     transition: margin, 0.3s;
     flex: none;
