CSS updates for FeatureCard empty footers, test animate related column opening, kmapsTree bullet hover

--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -175,9 +175,10 @@ aside#l-column__search--treeNav {
         top: -0.3rem;
         transform: rotate(45deg);
     }
-    .toggle-icon::before:hover {
-        background-color: #a27f1c;
-    }
+}
+
+.leafend:hover .toggle-icon::before {
+    background-color: #b99b45;
 }
 
 .leafopen .children {
