--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -47,8 +47,8 @@ body.html {
 
 .l-content__rightsidebar {
     margin: 0;
-    /* max-width: 45rem; */
-    min-width: calc(max(25vw, 32rem));
+    /* max-width: 45rem;
+    min-width: calc(max(25vw, 32rem)); */
     font-size: 1.4rem;
     background-color: #fff;
     resize: horizontal;
@@ -1152,15 +1152,15 @@ span.refdate {
     }
 }
 
-.resize-column {
+.resize-right-column {
     background: transparent;
     flex: 0 0 0.5rem;
 }
-.resize-column div {
+.resize-right-column div {
     background-color: transparent;
     cursor: default !important;
 }
-.resize-column div::before {
+.resize-right-column div::before {
     height: 70rem;
     cursor: col-resize;
     position: relative;
@@ -1176,7 +1176,7 @@ span.refdate {
     opacity: 0.3;
     transition: all 0.2s ease-in-out;
 }
-.resize-column:hover div::before {
+.resize-right-column:hover div::before {
     opacity: 0.3;
     left: -0.6rem;
     border-color: #444cf7;
@@ -1191,7 +1191,7 @@ span.refdate {
         #e5e5f7
     );
 }
-.resize-column:active div::before {
+.resize-right-column:active div::before {
     opacity: 0.6;
     border-left-color: #929ae4;
     background-size: 0.325rem 0.325rem;
