--- a/kmaps-app/src/views/Terms/TermNames/NameEntry.css
+++ b/kmaps-app/src/views/Terms/TermNames/NameEntry.css
@@ -29,7 +29,7 @@
 
 ul.sui-nameEntry.first-entry {
     background: #fff;
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 2.5rem;
     margin: 1rem 0rem 1.5rem;
     border: 1px solid #ccc;
     border-radius: 0.5rem;
