--- a/kmaps-app/src/views/css/Popover.scss
+++ b/kmaps-app/src/views/css/Popover.scss
@@ -2,9 +2,9 @@
     CSS rules for MandalaPopovers, included on all pages by call in App.js
  */
 .kmap-tag-group {
-    position: relative;
+    /* position: relative;
     display: inline-block;
-    white-space: nowrap;
+    white-space: nowrap; */
 }
 .kmap-tag-group .deflinks {
     vertical-align: super;
@@ -55,7 +55,11 @@
     left: 0;
     top: 0.4rem;
     margin: 0 1rem 0 0.2rem;
-    font-size: 1.75rem;
+    /*font-size: 1.75rem;*/
+    .u-icon__kmaps-popover::before {
+        font-size: 1.75rem;
+        margin-left: 0.15rem;
+    }
     svg {
         margin-top: -0.5rem;
     }
