--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -67,6 +67,8 @@
     }
     &:nth-child(n + 2) {
         /*  box-shadow: inset 0 0.5rem 0.5rem #ccc !important; */
+        position: relative;
+        top: 0.2rem;
     }
 }
 
