--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -515,10 +515,9 @@ ul.fancytree-container {
     font-size: 1.3rem;
     z-index: 1000;
     padding-right: 1rem;
-    /*margin-top: -2.9rem;*/
-    background: white;
-    /*padding-top: 3rem;*/
+    background: #fff;
     border-top: 0.5rem double #4d59ca;
+    border-left: 0.05rem solid #fff;
 }
 .l-column__search::before {
     /*  content:'';
@@ -566,7 +565,6 @@ ul.fancytree-container {
  */
 .search-column-header-filters {
     position: relative;
-    border-left: 1px solid #fff;
     background-color: #3f49b1;
     margin-right: -1rem;
     transition: opacity 0.2s ease-in-out;
@@ -577,7 +575,7 @@ ul.fancytree-container {
 }
 .search-column-header-filters a {
     color: #fff;
-    padding: 0.4rem 2rem 0.5rem 1.25rem;
+    padding: 0.4rem 2rem 0.25rem 1.25rem;
     display: inline-block;
 }
 .search-column-header-filters a:hover {
@@ -612,21 +610,21 @@ ul.fancytree-container {
 .search-column-header-filters .header-label-count .badge {
     font-size: 1.15rem;
     letter-spacing: 0.075rem;
-    color: #555;
+    color: #111;
     background: #fff;
-    margin: 0 0 0 0.75rem;
+    margin: 0 0 0 1rem;
     padding: 0.2rem 0.5rem;
-    position: relative;
-    top: -0.1rem;
     transition: all 0.4s ease-in-out;
     border-left: 1px solid #fff;
     border-right: 1px solid #fff;
+    opacity: 1;
 }
 .search-column-header-filters a:hover .badge {
-    background-color: transparent;
-    color: #fff;
+    opacity: 0.65;
+    color: #000;
 }
 .search-column-header-filters a:active .badge {
+    opacity: 1;
 }
 /* CLOSE - Search Column -- Filters */
 .search-column-header-filters .search-column-filters-close {
@@ -646,7 +644,7 @@ ul.fancytree-container {
     color: #fff;
 }
 .search-column-header-filters .search-column-filters-close:hover {
-    opacity: 0.75;
+    opacity: 0.9;
 }
 .search-column-header-filters .search-column-filters-close:active {
     transform: scale(1.1);
@@ -659,7 +657,9 @@ ul.fancytree-container {
     font-size: 1.4rem;
     color: #555;
     letter-spacing: 0.075rem;
-    margin: 1rem 0 0 1.5rem;
+    margin: 0 -1rem 0 0;
+    padding: 1rem 0 0 1.5rem;
+    border-top: 0.5rem double $color-mandala;
 }
 .search-column-reset-filters button {
     font-style: italic;
