--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -594,7 +594,8 @@ ul.fancytree-container {
     left: 0;
     transform: scale(1);
 }
-.search-column-header-filters a:active .header-icon {
+.search-column-header-filters a:active .header-icon svg {
+    transform: scale(1.075);
 }
 .search-column-header-filters a .header-label-count {
     font-size: 1.35rem;
@@ -610,21 +611,22 @@ ul.fancytree-container {
 .search-column-header-filters .header-label-count .badge {
     font-size: 1.15rem;
     letter-spacing: 0.075rem;
-    color: #111;
+    color: #000;
     background: #fff;
     margin: 0 0 0 1rem;
     padding: 0.2rem 0.5rem;
     transition: all 0.4s ease-in-out;
     border-left: 1px solid #fff;
     border-right: 1px solid #fff;
-    opacity: 1;
+    opacity: 0.85;
 }
 .search-column-header-filters a:hover .badge {
-    opacity: 0.65;
-    color: #000;
+    opacity: 1;
+    color: #333;
 }
 .search-column-header-filters a:active .badge {
-    opacity: 1;
+    opacity: 0.75;
+    color: #000;
 }
 /* CLOSE - Search Column -- Filters */
 .search-column-header-filters .search-column-filters-close {
@@ -663,23 +665,25 @@ ul.fancytree-container {
 }
 .search-column-reset-filters button {
     font-style: italic;
-    font-size: 1rem;
+    font-size: 1.15rem;
     font-weight: bold;
-    letter-spacing: 0.125rem;
+    letter-spacing: 0.175rem;
     padding: 0.2rem 1rem;
     border: 1px solid #ddd;
-    margin: 0 0.25rem;
+    margin: 0 0.35rem;
     border-radius: 0.5rem;
-    background-color: #b99839;
+    background-color: #a27f1c;
     color: #fff;
-    transition: all 0.25s;
+    transition: all 0.25s ease-in-out;
     position: relative;
-    top: -0.25rem;
+    top: -0.1rem;
+    opacity: 0.9;
 }
 .search-column-reset-filters button:hover {
     background-color: #a27f1c;
     border-color: #a27f1c;
     color: #fff;
+    opacity: 1;
 }
 .search-column-reset-filters button:active {
     border-color: transparent !important;
