--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -575,7 +575,7 @@ ul.fancytree-container {
 }
 .search-column-header-filters a {
     color: #fff;
-    padding: 0.4rem 2rem 0.25rem 1.25rem;
+    padding: 0.45rem 2rem 0.25rem 1.25rem;
     display: inline-block;
 }
 .search-column-header-filters a:hover {
@@ -583,23 +583,22 @@ ul.fancytree-container {
 .search-column-header-filters a:active {
 }
 .search-column-header-filters a .header-icon svg {
-    font-size: 1.75rem;
+    font-size: 2rem;
     position: relative;
     top: -0.15rem;
     left: 0;
     transition: all 0.2s ease-in-out;
-    transform: scale(1.075);
+    transform: scale(1.08);
 }
 .search-column-header-filters a:hover .header-icon svg {
     left: 0;
     transform: scale(1);
 }
 .search-column-header-filters a:active .header-icon svg {
-    transform: scale(1.075);
+    transform: scale(1.08);
 }
 .search-column-header-filters a .header-label-count {
-    font-size: 1.35rem;
-    font-weight: bold;
+    font-size: 1.3rem;
     letter-spacing: 0.075rem;
     text-transform: uppercase;
     margin-left: 1rem;
@@ -618,7 +617,10 @@ ul.fancytree-container {
     transition: all 0.4s ease-in-out;
     border-left: 1px solid #fff;
     border-right: 1px solid #fff;
+    border-radius: 0.75rem;
     opacity: 0.85;
+    position: relative;
+    top: 0.025rem;
 }
 .search-column-header-filters a:hover .badge {
     opacity: 1;
