--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -57,7 +57,7 @@
 .c-MainSearchToggle--button.active:focus {
     background-color: #646cbd !important;
     opacity: 1;
-    box-shadow: inset 0 0 2.5rem #3f49b1 !important;
+    box-shadow: inset 0 0 2.5rem #4d59ca !important;
 }
 
 .c-MainSearchToggle--group .c-MainSearchToggle--button.active {
