CSS cleanup & organize index.scss

--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -83,8 +83,7 @@ aside#l-column__search--treeNav {
         font-size: 1.45rem;
         font-weight: bold;
         letter-spacing: 0.0525rem;
-        position: relative;
-        top: -0.25rem;
+        padding-top: 0.5rem;
         .treeNav-header__closeButton {
             cursor: pointer;
             font-size: 2rem;
