--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -277,6 +277,18 @@ div.image-wrapper.center figcaption {
     background-color: $color-subjects;
 }
 
+// All perspective selects in aside (right and left)
+.c-perspective-select {
+    label {
+        display: block;
+    }
+    select {
+        max-width: 18rem;
+        margin-right: 1rem;
+        margin-bottom: 0.5rem;
+    }
+}
+
 // --------------------------------------
 // * CONTENT SECTION: Node Header -- move this
 // --------------------------------------
@@ -326,7 +338,7 @@ div.image-wrapper.center figcaption {
     border-radius: 0.5rem 0.5rem 0 0;
     .c-nodeHeader-itemHeader-subType {
         text-transform: capitalize;
-        &:after {
+        &::after {
             content: ': ';
         }
     }
@@ -374,7 +386,7 @@ div.image-wrapper.center figcaption {
             text-transform: uppercase;
             font-weight: bold;
 
-            &:after {
+            &::after {
                 content: ':';
                 margin-right: 1rem;
             }
@@ -385,11 +397,6 @@ div.image-wrapper.center figcaption {
 //
 // SEARCH Section ------- move this
 //
-
-ul.fancytree-container {
-    height: auto !important;
-}
-
 .l-content__rightsidebar {
     margin: 0;
     /* max-width: 45rem;
@@ -399,9 +406,77 @@ ul.fancytree-container {
     resize: horizontal;
     overflow: visible !important;
     border-left: 0.15rem solid #d0d0d0;
+
     .advanced-search-and-tree {
+        position: relative;
         border: none;
         margin-top: -3.4rem;
+        .nav-tabs {
+            padding: 0 0 0.5rem;
+            margin: 0 0 0 1rem;
+            .nav-link {
+                padding: 0 0.3rem;
+                margin: 0 0 0.1rem;
+                width: 31%;
+                text-align: center;
+                border: none;
+                border-right: 1px solid #aaa;
+                font-size: 1.6rem;
+                color: #000;
+                letter-spacing: 0.0375rem;
+                position: relative;
+                &:nth-of-type(2) {
+                    width: 38%;
+                }
+                &:last-of-type {
+                    border-right: none;
+                }
+                &.active {
+                    background-color: transparent;
+                    font-weight: bold;
+                }
+                &.active#kmaps-tab-tab-places {
+                    color: $color-places !important;
+                    border-color: $color-places;
+                }
+                &.active#kmaps-tab-tab-subjects {
+                    color: $color-subjects !important;
+                    border-color: $color-subjects;
+                }
+                &.active#kmaps-tab-tab-terms {
+                    color: $color-terms !important;
+                    border-color: $color-terms;
+                }
+                &.active::before {
+                    width: 0;
+                    height: 0;
+                    content: '';
+                    display: inline-block;
+                    border-style: solid;
+                    border-width: 8px 7px 1px 7px;
+                    border-color: white;
+                    border-top-color: inherit;
+                    position: absolute;
+                    top: 3.2rem;
+                    left: 50%;
+                    margin-left: -0.4rem;
+                    background: white;
+                }
+                &.active::after {
+                    width: 100%;
+                    height: 8px;
+                    content: '';
+                    display: inline-block;
+                    border-bottom-style: solid;
+                    position: absolute;
+                    bottom: -0.75rem;
+                    left: 0;
+                }
+            }
+        }
+        .treeNav-header ~ .nav-tabs .nav-link {
+            margin-top: 0;
+        }
     }
 }
 .closeSideBar.l-content__rightsidebar,
@@ -427,7 +502,6 @@ ul.fancytree-container {
             z-index: 1000;
         }
     }
-
     &.open.standalone {
         z-index: inherit;
         flex: inherit;
@@ -439,214 +513,176 @@ ul.fancytree-container {
         background: inherit;
         border-left: none;
     }
-
+    .c-perspective-select {
+        display: inline-block;
+    }
     .sui-advFooter {
         margin-top: 1.5rem;
         text-align: center;
     }
+    .treeNav-header {
+        display: flex;
+        justify-content: space-between;
+        margin: 0 -1rem 0 0;
+        font-size: 1.45rem;
+        font-weight: bold;
+        letter-spacing: 0.0525rem;
+        background-color: #3f49b1;
+        height: 2.9rem;
+        .treeNav-header__title {
+            margin-left: 2rem;
+            color: #e0e0e0;
+            padding: 0.3rem 0;
+        }
+        .treeNav-header__closeButton {
+            padding: 0;
+            margin: 0;
+            border: none;
+            background: transparent;
+            font-size: 1.75rem;
+            transition: all 0.2s ease-in-out;
+            transform: scale(1);
+            opacity: 0.5;
+            position: relative;
+            right: 1rem;
+            top: 0.1rem;
+            .icon::before {
+                color: #fff;
+            }
+            &:hover {
+                opacity: 0.9;
+            }
+            &:active {
+                transform: scale(1.1);
+            }
+        }
+    }
+    .search-column-header-filters {
+        position: relative;
+        background-color: #3f49b1;
+        margin-right: -1rem;
+        transition: opacity 0.2s ease-in-out;
+        opacity: 0.9;
+        &:hover {
+            opacity: 1;
+        }
+        a {
+            color: #fff;
+            padding: 0.45rem 2rem 0.2rem 1.25rem;
+            display: inline-block;
+
+            .header-icon svg {
+                font-size: 2rem;
+                position: relative;
+                top: -0.15rem;
+                transition: all 0.2s ease-in-out;
+                transform: scale(1.08);
+                opacity: 0.8;
+            }
+            &:hover .header-icon svg {
+                transform: scale(0.95);
+                opacity: 1;
+            }
+            &:active .header-icon svg {
+                transform: scale(1.08);
+            }
+
+            .header-label-count {
+                font-size: 1.3rem;
+                letter-spacing: 0.075rem;
+                text-transform: uppercase;
+                margin-left: 1rem;
+                .badge {
+                    font-size: 1.15rem;
+                    letter-spacing: 0.075rem;
+                    color: #000;
+                    background: #fff;
+                    margin: 0 0 0 1rem;
+                    padding: 0.2rem 0.5rem;
+                    transition: all 0.4s ease-in-out;
+                    border-left: 1px solid #fff;
+                    border-right: 1px solid #fff;
+                    border-radius: 0.75rem;
+                    opacity: 0.8;
+                    position: relative;
+                    top: 0.025rem;
+                }
+            }
+            &:hover .badge {
+                opacity: 1;
+                color: #333;
+            }
+            &:active .badge {
+                opacity: 0.75;
+                color: #000;
+            }
+        }
+        /* CLOSE - Search Column -- Filters */
+        .search-column-close-filters {
+            position: absolute;
+            right: 1rem;
+            top: 0.1rem;
+            padding: 0;
+            margin: 0;
+            border: none;
+            background: transparent;
+            font-size: 1.75rem;
+            transition: all 0.2s ease-in-out;
+            transform: scale(1);
+            opacity: 0.5;
+            .icon::before {
+                color: #fff;
+            }
+            &:hover {
+                opacity: 0.9;
+            }
+            &:active {
+                transform: scale(1.1);
+            }
+        }
+    }
+    /* RESET Filters */
+    .search-column-reset-filters {
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 1.4rem;
+        color: #555;
+        letter-spacing: 0.075rem;
+        margin: 0 -1rem 0 0;
+        padding: 1rem 0 0 1.5rem;
+        border-top: 0.5rem double $color-mandala;
+
+        button {
+            font-style: italic;
+            font-size: 1.15rem;
+            font-weight: bold;
+            letter-spacing: 0.175rem;
+            padding: 0.2rem 1rem;
+            border: 1px solid #ddd;
+            margin: 0 0.35rem;
+            border-radius: 0.5rem;
+            background-color: #a27f1c;
+            color: #fff;
+            transition: all 0.25s ease-in-out;
+            position: relative;
+            top: -0.1rem;
+            opacity: 0.9;
+            &:hover {
+                background-color: #a27f1c;
+                border-color: #a27f1c;
+                color: #fff;
+                opacity: 1;
+            }
+            &:active {
+                border-color: transparent !important;
+            }
+        }
+    }
 }
 
 /*
- * ----- RightSideBar Search Column Header -----
+ * RESIZE handle for RightSideBar
  */
-.search-column-header-filters {
-    position: relative;
-    background-color: #3f49b1;
-    margin-right: -1rem;
-    transition: opacity 0.2s ease-in-out;
-    opacity: 0.9;
-
-    :hover {
-        opacity: 1;
-    }
-
-    a {
-        color: #fff;
-        padding: 0.45rem 2rem 0.2rem 1.25rem;
-        display: inline-block;
-
-        .header-icon svg {
-            font-size: 2rem;
-            position: relative;
-            top: -0.15rem;
-            transition: all 0.2s ease-in-out;
-            transform: scale(1.08);
-            opacity: 0.8;
-        }
-
-        &:hover .header-icon svg {
-            transform: scale(0.95);
-            opacity: 1;
-        }
-
-        &:active .header-icon svg {
-            transform: scale(1.08);
-        }
-
-        .header-label-count {
-            font-size: 1.3rem;
-            letter-spacing: 0.075rem;
-            text-transform: uppercase;
-            margin-left: 1rem;
-            .badge {
-                font-size: 1.15rem;
-                letter-spacing: 0.075rem;
-                color: #000;
-                background: #fff;
-                margin: 0 0 0 1rem;
-                padding: 0.2rem 0.5rem;
-                transition: all 0.4s ease-in-out;
-                border-left: 1px solid #fff;
-                border-right: 1px solid #fff;
-                border-radius: 0.75rem;
-                opacity: 0.8;
-                position: relative;
-                top: 0.025rem;
-            }
-        }
-        &:hover .badge {
-            opacity: 1;
-            color: #333;
-        }
-        &:active .badge {
-            opacity: 0.75;
-            color: #000;
-        }
-    }
-    /* CLOSE - Search Column -- Filters */
-    .search-column-close-filters {
-        position: absolute;
-        right: 1rem;
-        top: 0.1rem;
-        padding: 0;
-        margin: 0;
-        border: none;
-        background: transparent;
-        font-size: 1.75rem;
-        transition: all 0.2s ease-in-out;
-        transform: scale(1);
-        opacity: 0.5;
-        .icon::before {
-            color: #fff;
-        }
-        &:hover {
-            opacity: 0.9;
-        }
-        &:active {
-            transform: scale(1.1);
-        }
-    }
-}
-
-/* RESET Filters */
-.search-column-reset-filters {
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 1.4rem;
-    color: #555;
-    letter-spacing: 0.075rem;
-    margin: 0 -1rem 0 0;
-    padding: 1rem 0 0 1.5rem;
-    border-top: 0.5rem double $color-mandala;
-
-    button {
-        font-style: italic;
-        font-size: 1.15rem;
-        font-weight: bold;
-        letter-spacing: 0.175rem;
-        padding: 0.2rem 1rem;
-        border: 1px solid #ddd;
-        margin: 0 0.35rem;
-        border-radius: 0.5rem;
-        background-color: #a27f1c;
-        color: #fff;
-        transition: all 0.25s ease-in-out;
-        position: relative;
-        top: -0.1rem;
-        opacity: 0.9;
-        &:hover {
-            background-color: #a27f1c;
-            border-color: #a27f1c;
-            color: #fff;
-            opacity: 1;
-        }
-        &:active {
-            border-color: transparent !important;
-        }
-    }
-}
-
-.advanced-search-and-tree {
-    position: relative;
-    .nav-tabs {
-        padding: 0 0 0.5rem;
-        margin: 0 0 0 1rem;
-        .nav-link {
-            padding: 0 0.3rem;
-            margin: 0 0 0.1rem;
-            width: 31%;
-            text-align: center;
-            border: none;
-            border-right: 1px solid #aaa;
-            font-size: 1.6rem;
-            color: #000;
-            letter-spacing: 0.0375rem;
-            position: relative;
-            &:nth-of-type(2) {
-                width: 38%;
-            }
-            &:last-of-type {
-                border-right: none;
-            }
-            &.active {
-                background-color: transparent;
-                font-weight: bold;
-            }
-            &.active#kmaps-tab-tab-places {
-                color: $color-places !important;
-                border-color: $color-places;
-            }
-            &.active#kmaps-tab-tab-subjects {
-                color: $color-subjects !important;
-                border-color: $color-subjects;
-            }
-            &.active#kmaps-tab-tab-terms {
-                color: $color-terms !important;
-                border-color: $color-terms;
-            }
-            &.active::before {
-                width: 0;
-                height: 0;
-                content: '';
-                display: inline-block;
-                border-style: solid;
-                border-width: 8px 7px 1px 7px;
-                border-color: white;
-                border-top-color: inherit;
-                position: absolute;
-                top: 3.2rem;
-                left: 50%;
-                margin-left: -0.4rem;
-                background: white;
-            }
-            &.active::after {
-                width: 100%;
-                height: 8px;
-                content: '';
-                display: inline-block;
-                border-bottom-style: solid;
-                position: absolute;
-                bottom: -0.75rem;
-                left: 0;
-            }
-        }
-    }
-
-    .treeNav-header ~ .nav-tabs .nav-link {
-        margin-top: 0;
-    }
-}
-
 .resize-right-column {
     background: transparent;
     flex: 0 0 0.5rem;
@@ -876,7 +912,7 @@ ul.fancytree-container {
         }
     }
 
-    .title span + .subtitle:before {
+    .title span + .subtitle::before {
         content: '>';
         margin-right: 0.5rem;
     }
@@ -1020,12 +1056,12 @@ ul.fancytree-container {
         span:first-child {
             margin-left: 0;
         }
-        span:after {
+        span::after {
             content: '>';
             margin-left: 0.5rem;
         }
 
-        span:last-child:after {
+        span:last-child::after {
             content: '';
         }
 
@@ -1139,11 +1175,11 @@ main.subjects .shanti-texts-section-title.text-level-7 {
 }
 
 span.refdate {
-    &:before {
+    &::before {
         content: ' (';
         padding-left: 0.5rem;
     }
-    &:after {
+    &::after {
         content: ')';
     }
 }
