Style minor update for TreeNav header

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -523,7 +523,7 @@ div.image-wrapper.center figcaption {
     .treeNav-header {
         display: flex;
         justify-content: space-between;
-        margin: 0 -1rem 0 0;
+        margin: 0 -1rem 1rem 0;
         font-size: 1.45rem;
         font-weight: bold;
         letter-spacing: 0.0525rem;
@@ -657,7 +657,7 @@ div.image-wrapper.center figcaption {
             font-size: 1.15rem;
             font-weight: bold;
             letter-spacing: 0.175rem;
-            padding: 0.2rem 1rem;
+            padding: 0.2rem 1rem 0.25rem;
             border: 1px solid #ddd;
             margin: 0 0.35rem;
             border-radius: 0.5rem;
