--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -571,7 +571,7 @@ div.image-wrapper.center figcaption {
         }
         a {
             color: #fff;
-            padding: 0.45rem 2rem 0.2rem 1.25rem;
+            padding: 0.25rem 2rem 0.2rem 1.75rem;
             display: inline-block;
             height: 2.9rem;
             .header-icon svg {
@@ -591,10 +591,10 @@ div.image-wrapper.center figcaption {
             }
 
             .header-label-count {
-                font-size: 1.3rem;
-                letter-spacing: 0.075rem;
-                text-transform: uppercase;
+                font-size: 1.45rem;
+                letter-spacing: 0.125rem;
                 margin-left: 1rem;
+                font-style: italic;
                 .badge {
                     font-size: 1.15rem;
                     letter-spacing: 0.075rem;
@@ -608,7 +608,7 @@ div.image-wrapper.center figcaption {
                     border-radius: 0.75rem;
                     opacity: 0.8;
                     position: relative;
-                    top: 0.025rem;
+                    top: 0.02rem;
                 }
             }
             &:hover .badge {
