--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -571,7 +571,7 @@ div.image-wrapper.center figcaption {
         }
         a {
             color: #fff;
-            padding: 0.25rem 2rem 0.2rem 1.75rem;
+            padding: 0.25rem 2rem 0.2rem 1.9rem;
             display: inline-block;
             height: 2.9rem;
             .header-icon svg {
@@ -723,7 +723,7 @@ div.image-wrapper.center figcaption {
             #e5e5f7
         );
     }
-    :active div::before {
+    &:active div::before {
         opacity: 0.6;
         border-left-color: #929ae4;
         background-size: 0.325rem 0.325rem;
