CSS update AV viewer Meta details layout

--- a/kmaps-app/src/views/AudioVideo/AVViewer.css
+++ b/kmaps-app/src/views/AudioVideo/AVViewer.css
@@ -349,17 +349,18 @@ div#meta-details {
     font-size: 1.25rem;
 }
 div#meta-details p {
-    margin: 0 0 0 18rem;
+    margin: 0 0 0.5rem 22rem;
+    line-height: 1.25;
     font-family: 'Open Sans', 'Segoe UI', Tahoma, sans-serif, shanticon;
 }
 div#meta-details p strong {
-    width: 20em !important;
+    width: 20rem !important;
     display: inline-block;
     text-transform: uppercase;
     letter-spacing: 0.0475rem;
     font-size: 1.25rem;
-    margin: 0 0 0 -18rem;
-    padding: 0.3rem 0 1rem;
+    margin: 0 0 0 -22rem;
+    padding: 0.3rem 0 0;
 }
 div#meta-details p strong:after {
     content: '';
