--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -13,6 +13,29 @@
     padding: 0;
     display: none;
 }
+.navbar-toggler {
+    // for mobile menu display, this still needs work with mobile menu setup
+    display: none;
+}
+.siteSettings-Toggle--button {
+    background-color: transparent;
+    border: none;
+    width: 5rem;
+    border-right: 1px solid #ccc;
+    border-radius: 0;
+    justify-content: space-around;
+    &:hover,
+    &:active,
+    &:focus {
+        background-color: transparent;
+        border-color: #ccc;
+        box-shadow: none;
+    }
+    svg {
+        color: #555;
+        font-size: 2rem;
+    }
+}
 .navbar-brand {
     display: inline-block;
 }
@@ -23,16 +46,16 @@
 .navbar-brand h1 {
 }
 .c-site__header h1 {
-    font-size: 2rem;
+    /* font-size: 2rem;
     display: inline;
     margin: 0 0 0 2rem;
     padding: 0;
-    line-height: 1.75;
+    line-height: 1.75; */
 }
 .c-site__header > nav {
     flex: 1 1;
     background-color: #fff !important;
-    padding: 0.25rem 1rem 0.5rem;
+    padding: 0;
     /* padding: 0;
     font-size: 1.5rem;*/
 }
@@ -49,8 +72,9 @@
     border: 0.1rem solid #4d59ca;
     border-color: #4d59ca #ccc;
     border-width: 0.3rem 0.1rem 0.1rem;
-    margin-top: 0.25rem;
-    min-width: 32rem;
+    margin: 0.4rem 1.25rem 0 0;
+    min-width: 15rem;
+    max-width: 25%;
     box-shadow: inset 0 0.25rem 0.75rem #aaa;
 }
 .c-site__search > * {
@@ -78,7 +102,7 @@
     font-size: 2.25rem;
     color: #ccc;
     cursor: pointer;
-    right: 1rem;
+    right: 2.25rem;
     position: relative;
 }
 
