--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -573,7 +573,7 @@ div.image-wrapper.center figcaption {
             color: #fff;
             background-color: #3f49b1;
             border: none;
-            padding: 0.25rem 2rem 0.2rem 1.9rem;
+            padding: 0 2rem 0.2rem 1.9rem;
             display: inline-block;
             height: 2.9rem;
             .header-icon svg {
@@ -591,7 +591,6 @@ div.image-wrapper.center figcaption {
             &:active .header-icon svg {
                 transform: scale(1.08);
             }
-
             .header-label-count {
                 font-size: 1.45rem;
                 letter-spacing: 0.125rem;
@@ -626,7 +625,7 @@ div.image-wrapper.center figcaption {
         .search-column-close-filters {
             position: absolute;
             right: 2rem;
-            top: 0.1rem;
+            top: 0;
             padding: 0;
             margin: 0;
             border: none;
