--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -1,3 +1,5 @@
+@import '../../index-variables';
+
 .c-MainSearchToggle--group {
     label {
         background-color: #fff;
@@ -63,6 +65,15 @@
             }
             &:nth-child(n + 2) {
             }
+        }
+        .icon {
+            color: #333;
+            font-size: 2.85rem;
+            position: relative;
+            bottom: 0.4rem;
+        }
+        &.active .icon {
+            color: #fff;
         }
     }
 }
