--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -49,10 +49,10 @@
     .c-site__search {
         display: flex;
         .sui-search1 {
-            svg {
+            .icon {
                 position: relative;
-                bottom: 0.3rem;
-                left: 2.5rem;
+                left: 2.75rem;
+                bottom: 0;
                 font-size: 1.5rem;
                 color: #555;
             }
@@ -60,11 +60,11 @@
                 // --- search input
                 font-style: italic;
                 font-size: 1.65rem;
-                padding: 0.6rem 3rem 0.3rem 3.25rem;
+                padding: 0.5rem 3rem 0.3rem 3.25rem;
                 background: transparent;
                 border-color: $color-mandala #ccc;
                 border-width: 0.3rem 0.1rem 0.1rem;
-                margin: 0.5rem 1.25rem 0 0;
+                margin: 0.6rem 1.25rem 0 0;
                 min-width: 28rem;
                 max-width: 25%;
                 box-shadow: inset 0 0.25rem 0.75rem #aaa;
