CSS minor updates carousel hover, RightSideBar life position method

--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -126,7 +126,7 @@
             display: inline-block;
             height: 100px;
             margin: 0 0.15rem 1rem;
-            padding-top: 0.5rem;
+            padding-top: 0.2rem;
             cursor: pointer;
             border-radius: 3px;
             border: 1px solid transparent;
@@ -135,7 +135,7 @@
                 height: 100%;
             }
             &:hover {
-                border-color: #ccc;
+                border-color: #f0f0f0;
             }
             &:active {
                 border-color: transparent;
