--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -290,7 +290,7 @@ div.image-wrapper.center figcaption {
 }
 
 // --------------------------------------
-// * CONTENT SECTION: Node Header -- move this
+// * CONTENT SECTION: Node Header
 // --------------------------------------
 .c-content__main__kmaps {
     .c-nodeHeader {
@@ -398,19 +398,19 @@ div.image-wrapper.center figcaption {
 // SEARCH Section ------- move this
 //
 .l-content__rightsidebar {
-    margin: 0;
+    margin: -3.3rem 0 0 0;
     /* max-width: 45rem;
     min-width: calc(max(25vw, 32rem)); */
     font-size: 1.4rem;
     background-color: #fff;
     resize: horizontal;
     overflow: visible !important;
-    border-left: 0.15rem solid #d0d0d0;
+    /* border-left: 0.15rem solid #d0d0d0; */
 
     .advanced-search-and-tree {
         position: relative;
         border: none;
-        margin-top: -3.4rem;
+        /*  margin-top: -3.4rem; */
         .nav-tabs {
             padding: 0 0 0.5rem;
             margin: 0 0 0 1rem;
@@ -573,7 +573,7 @@ div.image-wrapper.center figcaption {
             color: #fff;
             background-color: #3f49b1;
             border: none;
-            padding: 0.2rem 2rem;
+            padding: 0.2rem 2rem 0.4rem;
             display: inline-block;
             .header-icon svg {
                 font-size: 1.8rem;
@@ -608,7 +608,7 @@ div.image-wrapper.center figcaption {
                     border-radius: 0.75rem;
                     opacity: 0.8;
                     position: relative;
-                    top: 0.02rem;
+                    top: 0rem;
                 }
             }
             &:hover .badge {
