CSS updates KmapsTree window height, & related kmaptree animate width hover,  search filter animate open-close

--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -467,13 +467,12 @@
     top: 0.2rem;
 }
 .sui-advEdit {
-    display: none;
+    /* display: none; */
     background-color: #fafafa;
     text-align: left;
     border: 1px solid #e0e0e0;
     border-bottom-width: 0.2rem;
     border-radius: 0 0 2rem 2rem;
-    padding: 0.8rem 0.8rem 0.3rem 0.5rem;
     font-size: 1.25rem;
     color: #000;
     margin: 1.5rem 0.5rem 0;
