--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -232,7 +232,7 @@
 }
 
 .sui-advEdit {
-    display: none;
+    /* display: none;*/
     background-color: #fafafa;
     text-align: left;
     border: 0.1rem solid #ddd;
@@ -240,12 +240,14 @@
     border-bottom-width: 0.3rem;
     border-radius: 0.5rem 0.5rem 1.5rem 1.5rem;
     border-color: #929ae4 #ddd;
-    padding: 0.3rem 0.8rem;
+    /* padding: 0.3rem 0.8rem; */
     font-size: 1.3rem;
     color: #333;
     margin: 0 0 0.75rem;
     overflow: auto !important;
     box-shadow: inset -1rem -2rem 1.5rem #c9ccd82b;
+    transition: max-height 0.35s, border 0.25s, margin 0.25s;
+    max-height: 0;
 }
 
 .sui-advBox:first-child .sui-advEdit {
@@ -383,8 +385,9 @@ input:focus-visible,
 .sui-advEditLine {
     cursor: pointer;
     padding: 0 1rem 0.25rem;
-    margin-bottom: 0.1rem;
+    margin: 0 0.8rem 0.1rem;
     position: relative;
+    border-radius: 0.5rem;
     border-left: 0.1rem solid #edf2f7;
 }
 .sui-advEditLine:hover {
@@ -432,8 +435,9 @@ input:focus-visible,
 }
 
 .sui-adv-facetlist {
-    max-height: 15rem;
-    padding: 0.25rem 0;
+    /* max-height: 15rem;
+    transition: max-height .75s; */
+    padding: 0;
     border-radius: 1.25rem;
     border-radius: 0 0 1.25rem 1.25rem;
 }
