--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -5,7 +5,8 @@ ul.fancytree-container {
 }
 .c-kmaptree {
     margin: 0 1rem;
-    max-height: 50rem;
+    min-height: calc(100vh - 33.25rem);
+    max-height: calc(100vh - 33.25rem);
     overflow-y: scroll;
     border-style: solid;
     border-color: #929ae4 #929ae4 #929ae4 #ddd;
@@ -14,11 +15,16 @@ ul.fancytree-container {
     background: white;
     font-size: 1.25rem;
     padding: 0 1rem 2rem;
+    white-space: nowrap;
     box-shadow: inset -0.5rem -2rem 3rem #c0cbd04d;
+    transition: max-width 0.75s;
+    transition-delay: 1s;
 }
 .l-column__search .c-kmaptree {
-    max-height: 75rem;
-    min-height: 75rem;
+    /* max-height: 75rem;
+    min-height: 75rem; */
+    min-height: calc(100vh - 13.25rem);
+    max-height: calc(100vh - 13.25rem);
     margin: 0;
     padding-top: 1rem;
     padding-left: 2rem;
